# massacote-blog

./: .gitignore  CLAUDE.md  pyproject.toml
account/: admin.py  models.py  signals.py  urls.py
account/forms/: profile.py  user.py
account/migrations/: 0001_initial.py
account/templates/account/: create.html  delete.html  update.html  user.html
account/tests/: test_forms.py  test_models.py  test_signals.py  test_views.py
account/views/: user.py
comment/: admin.py  models.py  urls.py  views.py
comment/forms/: comment_form.py
comment/management/commands/: seed_comments.py
comment/migrations/: 0001_initial.py
comment/templates/comment/: comment_form.html  comment_section.html
comment/tests/: test_forms.py  test_models.py  test_views.py
core/: settings.py  urls.py
pages/: urls.py  views.py
post/: admin.py  models.py  urls.py  views.py
post/forms/: post_form.py
post/migrations/: 0001_initial.py  0002_post_excerpt.py  0003_post_cover_image.py  0004_alter_post_cover_image.py  0005_post_status.py  0006_post_is_approved.py  0007_alter_post_status.py
post/tests/: test_forms.py  test_models.py  test_views.py
static/css/: style.css
static/js/: profile-tabs.js
templates/: base.html
templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt
tests/: test_password_reset_flow.py  test_signup_and_post_flow.py
(+17 files in other folders)
