[project]
name = "massacote-blog"
version = "0.1.0"
description = "This is a blog to talk about tech and other things I want."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "pillow>=12.2.0",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=7.0.0",
]
